--- a/pages/bazar.html
+++ b/pages/bazar.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-	
-	<title>Domovska</title>
+	<title>Bazar</title>
 </head>
 <body>
 
@@ -23,22 +22,22 @@
 				<ul class="nav d-flex flex-sm-row flex-column justify-content-evenly">
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link active text-white" aria-current="page" href="#">Domovska Stranka</a>
+							<a class="nav-link text-white-50"  href="../index.html">Domovska Stranka</a>
 						</button>
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Bazar</a>
+							<a class="nav-link active text-white" aria-current="page" href="#">Bazar</a>
 						</button>
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Kontaktujte Nas</a>
+							<a class="nav-link text-white-50" href="kontakt.html">Kontaktujte Nas</a>
 						</button>
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Career</a>
+							<a class="nav-link text-white-50" href="career.html">Career</a>
 						</button>
 					</li>
 				</ul>
@@ -47,6 +46,6 @@
 	</nav>
 
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
