--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Bazar</a>
+							<a class="nav-link text-white-50" href="pages/bazar.html">Bazar</a>
 						</button>
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Kontaktujte Nas</a>
+							<a class="nav-link text-white-50" href="pages/kontakt.html">Kontaktujte Nas</a>
 						</button>
 					</li>
 					<li class="nav-item card bg-dark m-2">
 						<button type="button" class="btn btn-dark">
-							<a class="nav-link text-white-50" href="#">Career</a>
+							<a class="nav-link text-white-50" href="pages/career.html">Career</a>
 						</button>
 					</li>
 				</ul>
