--- a/pages/bazar.html
+++ b/pages/bazar.html
@@ -11,7 +11,7 @@
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg bg-dark ">
 		<div class="container-md">
-			<a class="navbar-brand text-white" href="#">Auto Bazar</a>
+			<a class="navbar-brand text-white" href="../index.html">Auto Bazar</a>
 
 			<button class="navbar-toggler btn btn-secondary card" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
