--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 	<!-- NAVBAR -->
-	<nav class="navbar navbar-expand-lg bg-dark">
+	<nav class="navbar navbar-expand-lg sticky-top bg-dark">
 		<div class="container-md">
 			<a class="navbar-brand text-white" href="#">Auto Bazar</a>
 
@@ -48,7 +48,7 @@
 		</div>
 	</nav>
 
-	<div class="container mt-1">
+	<div class="container">
 		<div class="row">
 			<!-- nejlepsi bazar -->
 			<div class="col-12 col-lg-4 card bg-light gy-4">
@@ -134,37 +134,164 @@
 		</div>
 
 		<!-- nejzhavejsi nabidky -->
-		<div class="row mt-2 gx-2 justify-content-between">
-			<div class="col-md-3 col-sm-6 col-12">
+		<div class="row text-center mt-2"><h1>Nejzhavejsi nabidky</h1></div>
+		<div class="row mt-2 g-2 justify-content-between">
+			<div class="col-lg-3 col-md-6 col-12">
 				<div class="card">
-					<img src="img/car1.jpg" class="card-img-top" alt="...">
+					<!-- <img src="img/car1.jpg" class="card-img-top" alt="..."> -->
+					<div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="img/car1.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car11.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car12.jpg" class="d-block w-100" alt="...">
+							</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouse1" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
 					<div class="card-body shadow-md">
 						<h5 class="card-title">Koingseg</h5>
 						<p class="card-text">Tahle kára je prosto super.</p>
 						<p class="card-text"><strong>Pouhých 7000$</strong></p>
-						<a href="#" class="btn btn-primary">Koupit</a>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+							Koupit
+						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h1 class="modal-title fs-5" id="exampleModalLabel">Koupe auta</h1>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										Zatim not implemented
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-primary">Ok</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-6 col-12">
+			<div class="col-lg-3 col-md-6 col-12">
 				<div class="card">
-					<img src="img/car2.jpg" class="card-img-top" alt="...">
+					<!-- <img src="img/car2.jpg" class="card-img-top" alt="..."> -->
+					<div id="carousel2" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="img/car2.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car21.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car22.jpg" class="d-block w-100" alt="...">
+							</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
 					<div class="card-body">
 						<h5 class="card-title">Pagani</h5>
 						<p class="card-text">Pro opravdove fanousky.</p>
 						<p class="card-text"><strong>Pouhých 9999$</strong></p>
-						<a href="#" class="btn btn-primary">Koupit</a>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+							Koupit
+						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h1 class="modal-title fs-5" id="exampleModalLabel">Koupe auta</h1>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										Zatim not implemented
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-primary">Ok</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-6 col-12">
+			<div class="col-lg-3 col-md-6 col-12">
 				<div class="card">
-					<img src="img/car3.jpg" class="card-img-top" alt="...">
+					<!-- <img src="img/car3.jpg" class="card-img-top" alt="..."> -->
+					<div id="carousel3" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="img/car3.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car31.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/car32.jpg" class="d-block w-100" alt="...">
+							</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
 					<div class="card-body">
 						<h5 class="card-title">Mustang</h5>
 						<p class="card-text">Je to Amerika?</p>
 						<p class="card-text"><strong>Pouhých 9899$</strong></p>
-						<a href="#" class="btn btn-primary">Koupit</a>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+							Koupit
+						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h1 class="modal-title fs-5" id="exampleModalLabel">Koupe auta</h1>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										Zatim not implemented
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-primary">Ok</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
