--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -9,7 +9,7 @@
 <body>
 
 	<!-- NAVBAR -->
-	<nav class="navbar navbar-expand-lg bg-dark ">
+	<nav class="navbar navbar-expand-lg sticky-top bg-dark ">
 		<div class="container-md">
 			<a class="navbar-brand text-white" href="../index.html">Auto Bazar</a>
 
