--- a/pages/bazar.html
+++ b/pages/bazar.html
@@ -44,6 +44,37 @@
 			</div>
 		</div>
 	</nav>
+	<!-- MAIN -->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-3">
+				<ol class="list-group list-group-numbered">
+					<li class="list-group-item d-flex justify-content-between align-items-start">
+						<div class="ms-2 me-auto">
+							<div class="fw-bold">Subheading</div>
+							Content for list item
+						</div>
+						<span class="badge bg-primary rounded-pill">14</span>
+					</li>
+					<li class="list-group-item d-flex justify-content-between align-items-start">
+						<div class="ms-2 me-auto">
+							<div class="fw-bold">Subheading</div>
+							Content for list item
+						</div>
+						<span class="badge bg-primary rounded-pill">14</span>
+					</li>
+					<li class="list-group-item d-flex justify-content-between align-items-start">
+						<div class="ms-2 me-auto">
+							<div class="fw-bold">Subheading</div>
+							Content for list item
+						</div>
+						<span class="badge bg-primary rounded-pill">14</span>
+					</li>
+				</ol>
+			</div>
+		</div>
+	</div>
 	<!-- FOOTER -->
 	<div class="container-fluid bg-dark">
 		<div class="container text-light bg-dark">
