--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 									</div>
 									<div class="modal-footer">
 										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button type="button" class="btn btn-primary">Ok</button>
+										<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tohle bych nekupoval">
+											Ok
+										</button>
 									</div>
 								</div>
 							</div>
@@ -219,12 +221,12 @@
 						<h5 class="card-title">Pagani</h5>
 						<p class="card-text">Pro opravdove fanousky.</p>
 						<p class="card-text"><strong>Pouhých 9999$</strong></p>
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalPagani">
 							Koupit
 						</button>
 
 						<!-- Modal -->
-						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal fade" id="exampleModalPagani" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
@@ -236,7 +238,9 @@
 									</div>
 									<div class="modal-footer">
 										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button type="button" class="btn btn-primary">Ok</button>
+										<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tohle bych nekupoval">
+											Ok
+										</button>
 									</div>
 								</div>
 							</div>
@@ -272,12 +276,12 @@
 						<h5 class="card-title">Mustang</h5>
 						<p class="card-text">Je to Amerika?</p>
 						<p class="card-text"><strong>Pouhých 9899$</strong></p>
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalMustang">
 							Koupit
 						</button>
 
 						<!-- Modal -->
-						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal fade" id="exampleModalMustang" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
@@ -289,7 +293,10 @@
 									</div>
 									<div class="modal-footer">
 										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button type="button" class="btn btn-primary">Ok</button>
+										
+										<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tohle bych nekupoval">
+											Ok
+										</button>
 									</div>
 								</div>
 							</div>
@@ -352,11 +359,7 @@
 
 				<div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
 					<p>© 2022 Company, Inc. All rights reserved.</p>
-					<ul class="list-unstyled d-flex">
-						<li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-						<li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-						<li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-					</ul>
+
 				</div>
 			</footer>
 		</div>
@@ -364,5 +367,13 @@
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+	<script>
+		const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+		const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+		const toastSelector = document.getElementById('liveToast')
+		const toast = new bootstrap.Toast(toastSelector)
+		toast.show()
+	</script>
 </body>
 </html>
