--- a/pages/bazar.html
+++ b/pages/bazar.html
@@ -46,32 +46,48 @@
 	</nav>
 	<!-- MAIN -->
 
-	<div class="container">
+	<div class="container mt-2 mb-2">
 		<div class="row">
-			<div class="col-3">
-				<ol class="list-group list-group-numbered">
-					<li class="list-group-item d-flex justify-content-between align-items-start">
-						<div class="ms-2 me-auto">
-							<div class="fw-bold">Subheading</div>
-							Content for list item
-						</div>
-						<span class="badge bg-primary rounded-pill">14</span>
-					</li>
-					<li class="list-group-item d-flex justify-content-between align-items-start">
-						<div class="ms-2 me-auto">
-							<div class="fw-bold">Subheading</div>
-							Content for list item
-						</div>
-						<span class="badge bg-primary rounded-pill">14</span>
-					</li>
-					<li class="list-group-item d-flex justify-content-between align-items-start">
-						<div class="ms-2 me-auto">
-							<div class="fw-bold">Subheading</div>
-							Content for list item
-						</div>
-						<span class="badge bg-primary rounded-pill">14</span>
-					</li>
-				</ol>
+			<div class="col-4">
+				<div id="list-example" class="list-group">
+					<a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+				</div>
+			</div>
+			
+			<div class="col-8">
+				<div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0"  style="height:200px; overflow-y: scroll;">
+					<h4 id="list-item-1">Item 1</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h4 id="list-item-2">Item 2</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h4 id="list-item-3">Item 3</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h4 id="list-item-4">Item 4</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -128,11 +144,7 @@
 
 				<div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
 					<p>© 2022 Company, Inc. All rights reserved.</p>
-					<ul class="list-unstyled d-flex">
-						<li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-						<li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-						<li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-					</ul>
+					
 				</div>
 			</footer>
 		</div>
