--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
 						Protože Královec je Česko 
 					</div>
 				</div>
+				<button type="button" class="btn btn-secondary" id="liveToastBtn">Show live toast</button>
+
+				<div class="toast-container position-fixed bottom-0 end-0 p-3">
+					<div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+						<div class="toast-header">
+							<img src="..." class="rounded me-2" alt="...">
+							<strong class="me-auto">Bootstrap</strong>
+							<small>Just now</small>
+							<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+						</div>
+						<div class="toast-body">
+							Hello, world! This is a toast message.
+						</div>
+					</div>
+				</div>
 			</div>
 			<!-- carousel -->
 			<div class="col gy-4">
@@ -375,5 +390,18 @@
 		const toast = new bootstrap.Toast(toastSelector)
 		toast.show()
 	</script>
+
+	<script>
+		const toastTrigger = document.getElementById('liveToastBtn')
+		const toastLiveExample = document.getElementById('liveToast')
+		if (toastTrigger) {
+			toastTrigger.addEventListener('click', () => {
+				const toast = new bootstrap.Toast(toastLiveExample)
+
+				toast.show()
+			})
+		}
+	</script>
+
 </body>
 </html>
