--- a/pages/bazar.html
+++ b/pages/bazar.html
@@ -6,7 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 	<title>Bazar</title>
 </head>
-<body>
+<body style="min-width: 450px;">
 
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg sticky-top bg-dark ">
@@ -50,37 +50,37 @@
 		<div class="row">
 			<div class="col-4">
 				<div id="list-example" class="list-group">
-					<a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
-					<a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
-					<a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-					<a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-1">Proč zrovna my?</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-2">Jak jsme začínali.</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-3">Deset let na trhu.</a>
+					<a class="list-group-item list-group-item-action" href="#list-item-4">Spoluprace se zahraničí</a>
 				</div>
 			</div>
 			
 			<div class="col-8">
 				<div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0"  style="height:200px; overflow-y: scroll;">
-					<h4 id="list-item-1">Item 1</h4>
+					<h4 id="list-item-1">Proč zrovna my?</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<h4 id="list-item-2">Item 2</h4>
+					<h4 id="list-item-2">Jak jsme začínali.</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<h4 id="list-item-3">Item 3</h4>
+					<h4 id="list-item-3">Deset let na trhu.</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<h4 id="list-item-4">Item 4</h4>
+					<h4 id="list-item-4">Spoluprace se zahraničí</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
